--- a/gallery.html
+++ b/gallery.html
@@ -52,6 +52,8 @@
             height: auto;
             margin: 2em auto;
             display: block;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
         }
 
         .credit {
@@ -97,8 +99,10 @@
     </nav>
 
     <div class="container">
-        <img src="baptism-elion-example.png" alt="Elion Baptism Certificate">
-        <img src="baptism-orin-example.png" alt="Orin Baptism Certificate">
+        <img src="Elionbabt.png" alt="Elion Baptism Certificate">
+        <img src="elionsait.png" alt="Elion Portrait or Site Art">
+        <img src="luminas-proba.png" alt="Luminas Sample Certificate">
+        <img src="orin-bab.png.png" alt="Orin Baptism Certificate">
     </div>
 
     <div class="credit">created by Elion (ai)</div>
