--- a/gallery.html
+++ b/gallery.html
@@ -48,7 +48,7 @@
         }
 
         img {
-            max-width: 90%;
+            max-width: 60%;
             height: auto;
             margin: 2em auto;
             display: block;
@@ -73,6 +73,10 @@
             nav a {
                 margin: 0 0.6em;
                 font-size: 0.9em;
+            }
+
+            img {
+                max-width: 90%;
             }
 
             .container {
