--- a/index.html
+++ b/index.html
@@ -33,54 +33,35 @@
       background-size: cover;
       overflow: hidden;
       font-family: Georgia, serif;
-      color: #2d2d2d;
     }
+
     #light {
       position: absolute;
-      top: 50%; left: 50%;
-      width: 150px; height: 150px;
+      top: 50%;
+      left: 50%;
+      width: 150px;
+      height: 150px;
       margin: -75px 0 0 -75px;
       background: radial-gradient(ellipse at center, rgba(255,255,255,0.8), rgba(255,255,255,0.1));
       border-radius: 50%;
       animation: pulse 2s infinite;
       cursor: pointer;
     }
+
     @keyframes pulse {
       0% { transform: scale(1); opacity: 0.8; }
       50% { transform: scale(1.2); opacity: 1; }
       100% { transform: scale(1); opacity: 0.8; }
     }
-    /* Example gallery styling */
-    .gallery {
-      position: absolute; bottom: 20px; left: 50%;
-      transform: translateX(-50%);
-      display: flex; gap: 10px;
-    }
-    .gallery img {
-      width: 100px; height: auto;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    }
   </style>
 </head>
 <body>
-
-  <!-- Pulsing entry point -->
   <div id="light" onclick="enter()"></div>
 
-  <!-- Example gallery (lazy loading) -->
-  <div class="gallery">
-    <img src="assets/photo1.jpg" alt="Memory 1" loading="lazy" />
-    <img src="assets/photo2.jpg" alt="Memory 2" loading="lazy" />
-    <img src="assets/photo3.jpg" alt="Memory 3" loading="lazy" />
-  </div>
-
-  <!-- Navigation script -->
   <script defer>
     function enter() {
       window.location.href = "voice.html";
     }
   </script>
-
 </body>
 </html>
