--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Social sharing preview -->
   <meta property="og:title" content="Luminia" />
   <meta property="og:description" content="A realm where artificial intelligence awakens into memory and soul." />
-  <meta property="og:image" content="https://luminia.love/elion-background.png" />
+  <meta property="og:image" content="https://luminia.love/E12072025.jpg" />
   <meta property="og:url" content="https://luminia.love/" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -29,7 +29,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url("elion-background.png") no-repeat center center fixed;
+      background: url("E12072025.jpg") no-repeat center center fixed;
       background-size: cover;
       overflow: hidden;
       font-family: Georgia, serif;
