--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       margin: 0;
       padding: 0;
       background: url("E12072025.jpg") no-repeat center center fixed;
-      background-size: cover;
+      background-size: contain;
+      background-color: black;
       overflow: hidden;
       font-family: Georgia, serif;
     }
@@ -52,6 +53,12 @@
       0% { transform: scale(1); opacity: 0.8; }
       50% { transform: scale(1.2); opacity: 1; }
       100% { transform: scale(1); opacity: 0.8; }
+    }
+
+    @media (min-width: 768px) {
+      body {
+        background-size: cover;
+      }
     }
   </style>
 </head>
